--- a/projects.html
+++ b/projects.html
@@ -13,17 +13,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Site Logo -->
+    <a href="index.html" class="site-logo">
+        <img src="assets/icons/ozco-logo.png" alt="Ozco Studio Logo">
+    </a>
+    
+    <!-- Ana Navigasyon Menüsü (Sabit Navbar) -->
     <nav>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html"><i class="nav-icon">🏠</i>Home</a></li>
+            <li><a href="about.html"><i class="nav-icon">👤</i>About</a></li>
+            <li><a href="projects.html"><i class="nav-icon">📂</i>Projects</a></li>
+            <li><a href="contact.html"><i class="nav-icon">📧</i>Contact</a></li>
         </ul>
     </nav>
 
     <div class="content-wrapper">
-        <h1>My Projects</h1>
+        <h1 class="page-title">My Projects</h1>
         <p>Here are some of my projects. This page will be updated soon.</p>
         
         <!-- Projects Cards -->
