Update footer styling with centered text and add project3.html with improved page structure

--- a/project1.html
+++ b/project1.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Site Logo -->
+    <a href="index.html" class="site-logo">
+        <img src="assets/icons/ozco-logo.png" alt="Ozco Studio Logo">
+    </a>
+    
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
@@ -31,15 +36,26 @@
     
 
     <footer>
-        <p>© 2025 Ozco Studio. All rights reserved.</p>
-        <p>
-            <a href="https://github.com/ozcotech" target="_blank">
-                <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
-            </a>
-            <a href="https://linkedin.com/in/ozcotech" target="_blank">
-                <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
-            </a>
-        </p>
+        <div class="footer-container">
+            <div class="footer-copyright">
+                © 2025 Ozco Studio. All rights reserved.
+            </div>
+            <div class="footer-social">
+                <a href="https://github.com/ozcotech" target="_blank">
+                    <img src="assets/icons/github-icon.svg" alt="GitHub" class="social-icon">
+                </a>
+                <a href="https://linkedin.com/in/ozcotech" target="_blank">
+                    <img src="assets/icons/linkedin-icon.svg" alt="LinkedIn" class="social-icon">
+                </a>
+            </div>
+            <div class="security-info">
+                <span id="secure-connection">
+                    <img src="assets/icons/lock-icon.svg" alt="Secure Connection" class="security-icon">
+                    Secure Connection (SSL)
+                </span>
+                <span class="hosting-info">Hosted by GitHub Pages</span>
+            </div>
+        </div>
     </footer>
     <script src="js/script.js" defer></script>
 </body>
