Update language settings to English and standardize navigation comments across site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=5.0, user-scalable=yes">
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://ozco.studio/ozco-logo.png">
     <meta name="twitter:site" content="@ozcotech">
     <meta name="twitter:creator" content="@ozcotech">
-    <!-- Schema.org JSON-LD Yapısal Verisi -->
+    <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -29,7 +29,7 @@
     </script>
     <title>Ozco Studio</title>
     <link rel="icon" type="image/png" href="ozco-logo.png">
-    <!-- Google Fonts - Bungee Hairline ve Doto -->
+    <!-- Google Fonts - Bungee Hairline and Doto -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Doto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Ozco Studio - Explore my portfolio where I showcase my projects, ideas, and tech-related insights.">
     <meta name="keywords" content="Ozco, Portfolio, Technology, Developer, Coding, Web Development, Mediation, Mediation Fee Calculator, Legal Tech, AI-Powered Tools, Artificial Intelligence, Python Development, Legal Automation">
@@ -37,18 +37,18 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css">
     <style>
-        /* Sadece bu sayfa için ek düzenleme */
+        /* Additional styling for this page only */
         body.home {
-            overflow-y: auto; /* İçerik fazlaysa scroll etsin */
+            overflow-y: auto; /* Enable scroll when content overflows */
         }
         
         body.home .content-wrapper {
-            padding-bottom: 20px; /* Alt boşluk */
+            padding-bottom: 20px; /* Bottom spacing */
         }
 
         @media (min-width: 769px) {
             body.home {
-                margin-left: 200px; /* Sol navbar genişliği */
+                margin-left: 200px; /* Left navbar width */
             }
         }
     </style>
@@ -59,7 +59,7 @@
         <img src="assets/icons/ozco-logo.png" alt="Ozco Studio Logo">
     </a>
     
-    <!-- Ana Navigasyon Menüsü (Sabit Navbar) -->
+    <!-- Main Navigation Menu (Fixed Navbar) -->
     <nav>
         <ul class="nav-links">
             <li><a href="index.html"><i class="nav-icon">🏠</i>Home</a></li>
