--- a/project3.html
+++ b/project3.html
@@ -36,7 +36,7 @@
         <img src="assets/icons/ozco-logo.png" alt="Ozco Studio Logo">
     </a>
     
-    <!-- Ana Navigasyon Menüsü (Sabit Navbar) -->
+    <!-- Main Navigation Menu (Fixed Navbar) -->
     <nav>
         <ul class="nav-links">
             <li><a href="index.html"><i class="nav-icon">🏠</i>Home</a></li>
