Replace emoji icons with custom SVG icons in navigation across all pages.

--- a/projects.html
+++ b/projects.html
@@ -18,13 +18,13 @@
         <img src="assets/icons/ozco-logo.png" alt="Ozco Studio Logo">
     </a>
     
-    <!-- Ana Navigasyon Menüsü (Sabit Navbar) -->
+    <!-- Main Navigation Menu -->
     <nav>
         <ul class="nav-links">
-            <li><a href="index.html"><i class="nav-icon">🏠</i>Home</a></li>
-            <li><a href="about.html"><i class="nav-icon">👤</i>About</a></li>
-            <li><a href="projects.html"><i class="nav-icon">📂</i>Projects</a></li>
-            <li><a href="contact.html"><i class="nav-icon">📧</i>Contact</a></li>
+            <li><a href="index.html"><img src="assets/icons/home-icon.svg" class="nav-icon" alt="Home icon">Home</a></li>
+            <li><a href="about.html"><img src="assets/icons/about-icon.svg" class="nav-icon" alt="About icon">About</a></li>
+            <li><a href="projects.html"><img src="assets/icons/projects-icon.svg" class="nav-icon" alt="Projects icon">Projects</a></li>
+            <li><a href="contact.html"><img src="assets/icons/contact-icon.svg" class="nav-icon" alt="Contact icon">Contact</a></li>
         </ul>
     </nav>
 
