--- a/project1.html
+++ b/project1.html
@@ -16,10 +16,10 @@
     
     <nav>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html"><img src="assets/icons/home-icon.svg" class="nav-icon" alt="Home icon">Home</a></li>
+            <li><a href="about.html"><img src="assets/icons/about-icon.svg" class="nav-icon" alt="About icon">About</a></li>
+            <li><a href="projects.html"><img src="assets/icons/projects-icon.svg" class="nav-icon" alt="Projects icon">Projects</a></li>
+            <li><a href="contact.html"><img src="assets/icons/contact-icon.svg" class="nav-icon" alt="Contact icon">Contact</a></li>
         </ul>
     </nav>
 
