Updated project 3 title and description in projects.html

--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,8 @@
                 <a href="project2.html" class="project-card">
                     <img src="assets/projects/project2.png" alt="Project 2" class="project-image">
                     <div class="card-content">
-                        <h3>Word Document Editor</h3>
-                        <p>A Python-based tool for editing Word documents using python-docx.</p>
+                        <h3>SmartGuide – AI-Powered Guide Robot for the Visually Impaired</h3>
+                        <p>To assist visually impaired individuals in navigating safely through both indoor and outdoor environments. The robot provides real-time audio instructions via Bluetooth-connected earbuds and utilizes AI-powered perception systems to detect obstacles and guide the user. The robot is designed to operate for at least 3 hours on a single charge.</p>
                     </div>
                 </a>
         
