Refactor project2.html to load content dynamically from JSON and remove static text

--- a/project2.html
+++ b/project2.html
@@ -26,10 +26,7 @@
     <div class="project-details-container">
         <img src="assets/projects/project2.png" alt="Word Editor Project" class="project-detail-image">
         
-        <div class="project-details-text">
-            <h2>Word Document Editor</h2>
-            <p>A Python-based project that utilizes the python-docx library to modify and format Word documents efficiently. Future improvements include adding a GUI for user-friendly interactions and integrating a database for managing multiple documents seamlessly.</p>
-        </div>
+        <div class="project-details-text"></div>
     </div>
 
     <footer>
@@ -55,5 +52,6 @@
         </div>
     </footer>
     <script src="js/script.js" defer></script>
+    <script src="js/project2.js" defer></script>
 </body>
 </html>
