--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                     <img src="assets/projects/project2.png" alt="Project 2" class="project-image">
                     <div class="card-content">
                         <h3>SmartGuide – AI-Powered Guide Robot for the Visually Impaired</h3>
-                        <p>To assist visually impaired individuals in navigating safely through both indoor and outdoor environments. The robot provides real-time audio instructions via Bluetooth-connected earbuds and utilizes AI-powered perception systems to detect obstacles and guide the user. The robot is designed to operate for at least 3 hours on a single charge.</p>
+                        <p>A smart robot designed to help visually impaired individuals navigate safely in both indoor and outdoor environments. It provides real-time voice guidance through Bluetooth-connected earbuds and uses AI-powered perception systems to detect obstacles and assist the user. The device offers a battery life of at least 3 hours on a single charge.</p>
                     </div>
                 </a>
         
